MVP rework